--- a/2521/1/prac/lec_code/Makefile
+++ b/2521/1/prac/lec_code/Makefile
@@ -1,16 +1,17 @@
 CC=clang
 CFLAGS=-Wall -Werror -std=c99 -g
 LDFLAGS=-g -lm
-BINS=derpcalc
+BINS=stack_linked_list
 
 all: $(BINS)
 
-derpcalc:	derpcalc.o stack.o
-	${CC} derpcalc derpcalc.o stack.o
+stack_linked_list:	stack_linked_list.o stack.o linked_list.o 
+	${CC} -o stack_linked_list stack_linked_list.o stack.o linked_list.o 
 
-derpcalc.o:	derpcalc.c stack.h
-stack.o:	stack_array.c stack.h
+stack_linked_list.o:	stack_linked_list.c stack.h linked_list.h
+stack.o:	stack.h item.h
+linked_list.o:	linked_list.h linked_list.c item.h
 
 clean:
-	-rm -f derpcalc derpcalc.o stack.o core
+	-rm -f stack_linked_list *.o core
 
