--- a/2521/1/prac/3.Graph/1.Func/Makefile
+++ b/2521/1/prac/3.Graph/1.Func/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CCFLAGS=-Wall -Werror -std=c99
 LDFLAGS=-g -lm
 
-BINS=node_test
+BINS=node_test list_test
 
 .PHONY: all clean
 
@@ -14,6 +14,9 @@ clean:
 node_test:	node_test.o node.o item.o
 	$(CC) $(CCFLAGS) -o $@ $^ $(LDFLAGS)
 
+list_test:	list_test.o list.o node.o item.o
+	$(CC) $(CCFLAGS) -o $@ $^ $(LDFLAGS)
+
 item.o:	item.h item.c
 node.o:	node.h node.c item.h
-
+list.o:	list.h list.c node.h item.h
